fix some bugs and sonar issues